--- a/daftar.html
+++ b/daftar.html
@@ -294,14 +294,13 @@
         left: 0;
         right: 0;
       }
-
       .form-step.form-step-active img {
         margin: auto;
         left: 0;
         right: 0;
         display: block;
         padding: 10px;
-        background: rgba(13, 110, 253, 0.25);
+        background: rgb(240 246 255);
         border-radius: 100%;
       }
 
@@ -555,9 +554,10 @@
                 alt="check"
                 width="100"
               />
-              <h4 class="text-center mt-43">Thank You for Registrasi!</h4>
+              <h4 class="text-center mt-43">Terima Kasih telah Mendaftar!</h4>
               <p class="text-center">
-                You have successfully completed the registration.
+                Silakan periksa kotak masuk pada email untuk
+                verifikasi data diri Anda!
               </p>
             </div>
           </form>
