--- a/login.html
+++ b/login.html
@@ -275,7 +275,9 @@
               </div>
               <div class="d-flex flex-row-reverse mt-25">
                 <div class="p-2">
-                  <a href="#" class="fst-italic forget">Lupa Password?</a>
+                  <a href="forgetpass.html" class="fst-italic forget"
+                    >Lupa Password?</a
+                  >
                 </div>
               </div>
               <hr />
