--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@
 						</form>
 
 						<div class="d-grid d-md-none d-xl-flex gap-15 gap-xl-0 order-3">
-
-
-							<img class="d-none d-lg-block" src="./assets/logo/logo PHE-01.svg" alt="" width="150" />
+							<a href="index.html">
+								<img class="d-none d-lg-block" src="./assets/logo/logo PHE-01.svg" alt="" width="150" />
 							</a>
 						</div>
 					</div>
@@ -310,25 +309,15 @@
 												aria-labelledby="headingTwo" data-bs-parent="#accordion-how-it-works">
 												<div class="accordion-body">
 													<p>
-														1. Jejaring yang luas. Kesempatan berjejaring dengan para
-														Upstream
-														Champion lainnya dan seluruh Perwira Subholding Upstream.
-														2. Keterlibatan di berbagai event korporasi. Kesempatan terlibat
-														dan
-														berkontribusi langsung di berbagai event korporasi di lingkungan
-														internal Subholding Upstream.<br>
-														3. Top Up Learning Hours. Kesempatan menambah poin learning
-														hours
-														sesuai dengan Individual Development Plan (IDP) para
-														Perwira.<br>
-														4. Kesempatan belajar. Akses terhadap berbagai program bootcamp
-														seputar personal branding, komunikasi kreatif, dan lain
-														sebagainya.<br>
-														5. Kesempatan mendapatkan hadiah menarik. Upstream Champion
-														berhak
-														mendapatkan berbagai hadiah menarik sesuai dengan besaran poin
-														yang
-														mereka kumpulkan selama masa bertugas
+														1. Menerima pelatihan untuk meningkatkan kapasitas pribadi dan
+														profesional.
+														2. Menambah eksposur terhadap perkembangan terbaru Perusahaan.
+														3. Terlibat dalam berbagai acara Perusahaan di level nasional
+														dan lokal.
+														4. Eksposur terhadap Direksi, Manajemen, dan stakeholder
+														Perusahaan.
+														5. Kesempatan menambah jejaring (networking).
+														6. Memperoleh hadiah dan sertifikat.
 													</p>
 												</div>
 											</div>
