--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms & Condition</title>
+    <title>Frequently asked questions</title>
     <link rel="icon" type="image/x-icon" href="" />
 
     <!-- Plugin CSS -->
@@ -79,7 +79,7 @@
             <div class="container">
                 <div class="position-relative py-43 py-lg-80">
                     <div class="d-grid gap-10 text-center">
-                        <h4 class="heading-section-4 text-white mb-0 text-l">Terms & Condition</h4>
+                        <h4 class="heading-section-4 text-white mb-0 text-l">Frequently asked questions</h4>
                     </div>
 
                 </div>
