--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<!-- Live -->
 
-		<!-- <nav class="navbar navbar-expand-xl bg-ghost-white">
+		<nav class="navbar navbar-expand-xl bg-ghost-white">
 			<div class="container justify-content-md-start">
 
 				<a class="btn btn-orange text-white fw-semiBold py-12 px-34 me-12 rounded-pill" href="login.html"
@@ -92,9 +92,9 @@
 									<img class="logoUcL" src="./assets/logo/Upstream Champion Landscape Logo Light.png"
 										width="30%" alt="" />
 									<h1 class="heading-header-2 mb-0 text-white">UPSTREAM CHAMPION</h1>
-									<p class="text-white">Inviting officers to give their best contribution to be a
-										Champion! Explore your
-										potential, grow, and campaign the best message for Upstream Subholding!
+									<p class="text-white">Inviting all perwira to give their best contribution
+										to be a Champion! Explore your potential, grow, and campaign the best message
+										for Subholding Upstream!
 									</p>
 									<p class="text-white">Ready for a New Challenge?</p>
 									<a class="btn btn-orange  fw-semiBold py-12 px-xl-34 ms-xl-12 rounded-pill"
@@ -119,11 +119,11 @@
 
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- batas Live -->
 
 		<!-- Countdown -->
-		<nav class="navbar navbar-expand-xl bg-ghost-white">
+		<!-- <nav class="navbar navbar-expand-xl bg-ghost-white">
 			<div class="container justify-content-md-start">
 				<img class=" d-lg-none mb-5" src="./assets/logo/logo PHE-01.svg" alt="" width="150" />
 
@@ -237,7 +237,7 @@
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- batas Countdown-->
 
@@ -258,9 +258,9 @@
 
 					<div class="col-lg-6 ">
 						<div class="d-grid gap-12 w-md-75 w-lg-100">
-							<div class="heading-text-1 text-primary">About Upstream Champion</div>
-							<h2 class="heading-section-2 text-dark mb-0">Kenapa Perwira Harus Bergabung Upstream
-								Champion
+							<div class="heading-text-1 text-primary">About Upstream Champion </div>
+							<h2 class="heading-section-2 text-dark mb-0">Kenapa Perwira Harus Bergabung UPSTREAM
+								CHAMPION
 							</h2>
 							<!-- <div class="d-flex">
 								<a class="btn btn-primary fw-semiBold py-12 px-43 mt-25 rounded-pill" href="#"
@@ -689,7 +689,7 @@
 			<p class="text-center p-20">Temukan jawaban terbaik atas pertanyaan-pertanyaan yang sering diajukan di sini.
 			</p>
 			<p class="text-center">
-				<a class="btn btn-primary text-white fw-semiBold py-12 px-43 mt-25 rounded-pill" href="#"
+				<a class="btn btn-primary text-white fw-semiBold py-12 px-43 mt-25 rounded-pill" href="faq.html"
 					role="button">Lihat Selengkapnya</a>
 			</p>
 			<div class="elips">
@@ -699,15 +699,19 @@
 
 							<div class="tabsFaq">
 								<div class="question">
-									Apa yang menjadi latar belakang bagi Internal Communication PHE dalam
-									menyelenggarakan program Upstream Champion?
+									Siapa saja yang dapat mendaftar program UPSTREAM CHAMPION?
 								</div>
 								<div class="answercont">
 									<div class="answer">
-										<span>Subholding Upstream menyadari pentingnya pengembangan Perwira yang
-											berdedikasi kuat dalam memberikan dampak positif bagi sesama Perwira di
-											wilayah kerja masing-masing melalui penyampaian pesan, nilai-nilai, dan
-											cerita baik Perusahaan. </span>
+										<span>Berikut adalah beberapa persyaratan khusus untuk mendaftar program
+											UPSTREAM CHAMPION:</span>
+										<ol>
+											<li>Pekerja Waktu Tidak Tertentu (PWTT) dan Pekerja Waktu Tertentu (PWT) di
+												lingkungan Subholding Upstream dengan masa kerja minimal 1 (satu) tahun.
+											</li>
+											<li>Berlokasi kerja di Indonesia.</li>
+											<li>Bukan berasal dari jajaran manajemen Subholding Upstream.</li>
+										</ol>
 									</div>
 								</div>
 							</div>
