--- a/Terms.html
+++ b/Terms.html
@@ -214,68 +214,72 @@
                                 </ol>
                                 <div class="row justify-content-center">
                                     <div class="col-lg-11">
-                                        <table class="table table  table-hover table-bordered ">
-                                            <thead class="table-blue">
-                                                <tr>
-                                                    <th scope="col" class="pricing-header">Tema Besar</th>
-                                                    <th scope="col">Turunan Topik</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row" class="text-center psAlign ">AKHLAK Core
-                                                        Values</th>
-                                                    <td>
-                                                        <ul>
-                                                            <li>Wujud Amanah Perwira Subholding Upstream</li>
-                                                            <li> Wujud Kompeten Perwira Subholding Upstream</li>
-                                                            <li> Wujud Harmonis Perwira Subholding Upstream</li>
-                                                            <li> Wujud Loyal Perwira Subholding Upstream</li>
-                                                            <li> Wujud Adaptif Perwira Subholding Upstream</li>
-                                                            <li> Wujud Kolaboratif Perwira Subholding Upstream</li>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row" class="text-center psAlign table-info">ESG
-                                                        (Environmental, Social, and Governance)</th>
-                                                    <td class="table-info">
-                                                        <ul>
-                                                            <li>Turut Serta Mengatasi Perubahan Iklim
-                                                            </li>
-                                                            <li>Pengelolaan dan Pengolahan Limbah
-                                                            </li>
-                                                            <li>Keselamatan dan Kesehatan Kerja (K3) untuk Lingkungan
-                                                                Kerja Aman
-                                                            </li>
-                                                            <li>Tumbuh Bersama Masyarakat
-                                                            </li>
-                                                            <li>Komitmen Pada Bisnis Bertanggung Jawab
-                                                            </li>
-                                                            <li>Pencegahan Benturan Kepentingan</li>
-                                                            <li>Keberagaman dan Inklusivitas dalam mendukung ESG</li>
-                                                        </ul>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row" class="text-center psAlign ">HSSE
-                                                        (Health, Safety, Security and Environment)</th>
-                                                    <td colspan="2">
-                                                        <ul>
-                                                            <li>Implementasi Peningkatan Kesadaran Keselamatan dan
-                                                                Keamanan Lingkungan dalam Bekerja
-                                                            </li>
-                                                            <li>Pentingnya Pelatihan Keselamatan
-                                                            </li>
-                                                            <li>Kesehatan Mental dalam Kesejahteraan Perwira
-                                                            </li>
-                                                            <li>Inovasi dalam Peralatan Keselamatan</li>
-                                                            <li>Promosi Budaya Keselamatan</li>
-                                                        </ul>
-                                                    </td>
+                                        <div class="table-responsive">
+                                            <table class="table table  table-hover table-bordered ">
+                                                <thead class="table-blue">
+                                                    <tr>
+                                                        <th scope="col" class="pricing-header">Tema Besar</th>
+                                                        <th scope="col">Turunan Topik</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row" class="text-center psAlign ">AKHLAK Core
+                                                            Values</th>
+                                                        <td>
+                                                            <ul>
+                                                                <li> Wujud Amanah Perwira Subholding Upstream</li>
+                                                                <li> Wujud Kompeten Perwira Subholding Upstream</li>
+                                                                <li> Wujud Harmonis Perwira Subholding Upstream</li>
+                                                                <li> Wujud Loyal Perwira Subholding Upstream</li>
+                                                                <li> Wujud Adaptif Perwira Subholding Upstream</li>
+                                                                <li> Wujud Kolaboratif Perwira Subholding Upstream</li>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row" class="text-center psAlign table-info">ESG
+                                                            (Environmental, Social, and Governance)</th>
+                                                        <td class="table-info">
+                                                            <ul>
+                                                                <li>Turut Serta Mengatasi Perubahan Iklim
+                                                                </li>
+                                                                <li>Pengelolaan dan Pengolahan Limbah
+                                                                </li>
+                                                                <li>Keselamatan dan Kesehatan Kerja (K3) untuk
+                                                                    Lingkungan
+                                                                    Kerja Aman
+                                                                </li>
+                                                                <li>Tumbuh Bersama Masyarakat
+                                                                </li>
+                                                                <li>Komitmen Pada Bisnis Bertanggung Jawab
+                                                                </li>
+                                                                <li>Pencegahan Benturan Kepentingan</li>
+                                                                <li>Keberagaman dan Inklusivitas dalam mendukung ESG
+                                                                </li>
+                                                            </ul>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row" class="text-center psAlign ">HSSE
+                                                            (Health, Safety, Security and Environment)</th>
+                                                        <td colspan="2">
+                                                            <ul>
+                                                                <li>Implementasi Peningkatan Kesadaran Keselamatan dan
+                                                                    Keamanan Lingkungan dalam Bekerja
+                                                                </li>
+                                                                <li>Pentingnya Pelatihan Keselamatan
+                                                                </li>
+                                                                <li>Kesehatan Mental dalam Kesejahteraan Perwira
+                                                                </li>
+                                                                <li>Inovasi dalam Peralatan Keselamatan</li>
+                                                                <li>Promosi Budaya Keselamatan</li>
+                                                            </ul>
+                                                        </td>
 
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
